Correct piping and align input

--- a/twitterlite/src/styles/app.scss
+++ b/twitterlite/src/styles/app.scss
@@ -16,4 +16,22 @@ body{
     height: 100vh;
     font-size: 32px;
     border: 3px solid black;
+    padding-left:.5vh;
+    padding-top: 5%;
+}
+.Center{
+    display: grid;
+    align-content: center;
+}
+.list{
+    list-style: none;
+}
+.imput{
+
+}
+.inputbox{
+    border:1px solid black;
+    background-color: lightgrey;
+    width:25vh;
+    height:3vh;
 }
